--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
 body{
     font-family: 'Oswald', sans-serif;
 }
-.left{
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
+/* .left{
     
     display: inline-block;
     position: absolute;
     left: 35px;
     top: 20px;
     
-}
+} */
 .left img{
     width: 65px;
     filter: invert(100%);
@@ -19,25 +25,27 @@ body{
 }
 .mid{
     
-    display: block;
+    /* display: block;
     margin: 20px auto;
-    width: 37%;
+    width: 37%; */
 }
 .right{
     
-    display: inline-block;
+    /* display: inline-block;
     position: absolute;
     right: 35px;
-    top: 20px;
+    top: 20px; */
+    display: flex;
+    align-items: center;
 }
 .right .btn{
     margin: 0px 9px;
     background-color: black;
     color: white;
-    padding: 4px 14px;
+    padding: .5rem 1rem;
     border: 2px solid gray;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: 1rem;
     cursor: pointer;
     font-family: 'Oswald', sans-serif;
 }
@@ -59,10 +67,10 @@ body{
 }
 .container{
     border: 1px rgb(159, 186, 202) solid;
-    margin: 106px 80px;
-    padding: 75px;
+    margin: 5rem 3rem;
+    padding: 3rem;
     width: 28%;
-    height: 350px;
+    /* height: 350px; */
     border-radius: 9px;
 }
 .container h1{
@@ -84,11 +92,24 @@ body{
 .form-group input{
     text-align: center;
     display: block;
-    width: 420px;
+    width: 100%;
     padding: 2px;
     border: 2px solid black;
     margin: 11px auto;
-    font-size: 25px;
+    font-size: 1.2rem;
     border-radius: 8px;
     font-family: 'Oswald', sans-serif;
+}
+@media only screen and (max-width:815px){
+    .header{
+        flex-direction: column;
+        /* width: 100%; */
+    }
+    .mid{
+        text-align: center;
+    }
+    .container{
+        margin: 2rem auto;
+        width: 50%;
+    }
 }
